--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 2.5vh;
+}
+
+h3 {
+  font-size: 1.8vh;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
